--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.15",
+    "sanitize-html": "^2.13.1",
     "serverless-http": "^3.2.0",
-    "sweetalert2": "^11.14.4"
+    "sweetalert2": "^11.14.4",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
