--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
@@ -31,6 +32,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prisma": "^6.4.1"
   }
 }
